--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-3-mini",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://boomcamp.github.io/react-3-mini/",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
